Disable /part command for now

See https://bugzilla.gnome.org/show_bug.cgi?id=643295